# datacatalogue

./: Dockerfile  README.md  compose.yaml  pom.xml
.github/workflows/: converter.yml  data_quality_tool.yml  datacatalogue.yml
config/: application.tmpl
converter/: controller.py  pyproject.toml
converter/converter/: excel_to_json.py  json_to_excel.py
converter/tests/: MinimalDataModelExample.xlsx  test_endpoint.py
converter/tests/excel_to_json/: test_convert_excel_to_json.py  test_process_variable.py  (+3 more)
data_quality_tool/: Dockerfile  README.md  common_entities.py  compose.yaml  controller.py  pyproject.toml
data_quality_tool/converter/: excel_to_json.py  json_to_excel.py
data_quality_tool/frontend/: Dockerfile  index.html  nginx.conf  script.js  style.css
data_quality_tool/tests/: MinimalDataModelError.xlsx  MinimalDataModelExample.json  MinimalDataModelExample.xlsx  test_endpoint.py
data_quality_tool/tests/excel_to_json/: test_clean_empty_fields.py  test_convert_excel_to_json.py  test_insert_variable_into_structure.py  test_process_enumerations.py  test_process_values_based_on_type.py  test_process_variable.py  test_validate_variable_type.py
data_quality_tool/tests/json_to_excel/: test_extract_values.py  test_parse_variables.py  test_recursive_parse_json.py
data_quality_tool/tests/validator/: test_contains_required_dataset.py  test_excel_validation.py  test_validate_common_data_element.py  test_validate_data_model.py  test_validate_group.py  test_validate_longitudinal_elements.py
data_quality_tool/validator/: excel_validator.py  json_validator.py
(+34 files in other folders)
