[tool.poetry]
name = "converter"
version = "0.1.0"
description = ""
authors = ["kfilippopolitis <kostasfilippop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.2"
pandas = "^2.2.0"
gunicorn = "^21.2.0"
xlsxwriter = "^3.1.9"
openpyxl = "^3.1.2"
black = "^24.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

